@@ -1,1 +1,1 @@
-DIST belle-sip-1.4.1.tar.gz 552669 SHA256 fd094ee4fab3faed4f8cf67633bb1730333067c8c98d9238c2076f352e863088 SHA512 4d2fdbda6c2b37ae19d4c92ac5a4dbe78165ae87bd4f63579ebb06477c405f1b5430bdd25ab42ae127191bdf3c3c9f62cad4c3d63847a0c7f5a260d5320a56fe WHIRLPOOL 0ab3f44cf02382d12a5326154e2630692d80a7bcdfb0a18ba8521134e2268c319a9e29e9944776658eeb645e9376abff7aadd096eab862400c45ac065f37b89e
+DIST belle-sip-1.4.2.tar.gz 795385 SHA256 8477310c30d2081821275e776244f854f17e0f3346bff23c44fd7a9de7f981ee SHA512 39590df959d22dc2c8f122176653e4254c4994f8ebfcd3f9066fd207d727b2d84708e4a4aa26ead109061be4d3084fafc3c8a7c3c5b7e4a3eed9bb0679e17c6e WHIRLPOOL 41bffd0fcc19a64b4b98389eb392968c6d9105cdafb0edb762d11008e0dc8470ae0d0a0685591d79d7a37ab4ef9af07b5d648d68636d0357085ed3845cd7d731
